--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,10 +1,11 @@
 connexion == 2.0.2
 swagger-ui-bundle == 0.0.2
 python_dateutil == 2.6.0
-setuptools >= 21.0.0
+setuptools == 21.0.0
 flask_cors == 3.0.7
+google.cloud  == 0.34.0
 google-cloud-datastore == 1.8.0
 google-cloud-storage == 1.16.1
 google-cloud-pubsub == 0.42.1
-google-python-cloud-debugger
-jwkaas == 0.3
+google-cloud-kms == 0.2.1
+google-python-cloud-debugger == 2.13
