--- a/api_server/endpoint_api.yaml
+++ b/api_server/endpoint_api.yaml
@@ -37,6 +37,38 @@ paths:
       summary: Get last 20 other build statuses
       description: Get a list of last 20 other build statuses
       x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
+  /build-statuses-other/{status}:
+    get:
+      responses:
+        200:
+          $ref: '#/components/responses/BuildOtherStatuses'
+        204:
+          description: No content
+        404:
+          description: Status not of correct type
+      summary: Get other build statuses by conditions
+      description: Get a list of other build statuses by status, days and max rows
+      parameters:
+        - name: status
+          in: path
+          description: A unique status identifier
+          required: True
+          schema:
+              type: string
+              enum: [failing, pending, passing]
+        - name: days
+          in: query
+          description: Total days to include
+          schema:
+              type: integer
+              default: 7
+        - name: maxRows
+          in: query
+          description: Max rows to return
+          schema:
+              type: integer
+              default: 20
+      x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
   /error-reporting:
     get:
       responses:
@@ -44,8 +76,21 @@ paths:
           $ref: '#/components/responses/ErrorReporting'
         204:
           description: No content
-      summary: Get last 20 error reportings
-      description: Get a list of last 20 error reportings
+      summary: Get errors reportings by conditions
+      description: Get a list of errors reportings by days and max rows
+      parameters:
+        - name: days
+          in: query
+          description: Total days to include
+          schema:
+              type: integer
+              default: 7
+        - name: maxRows
+          in: query
+          description: Max rows to return
+          schema:
+              type: integer
+              default: 20
       x-openapi-router-controller: openapi_server.controllers.errorreporting_controller
 components:
   schemas:
@@ -122,19 +167,14 @@ components:
     ErrorReport:
       required:
       - id
-      - json_payload
       - log_name
       - receive_timestamp
       - resource
-      - source_location
-      - text_payload
       - trace
       type: object
       properties:
         id:
           type: string
-        json_payload:
-          type: object
         log_name:
           type: string
         receive_timestamp:
@@ -142,20 +182,13 @@ components:
           type: string
         resource:
           type: object
-        source_location:
-          type: object
-        text_payload:
-          type: string
         trace:
           type: string
       example:
         id: 1a9390e9-4ac5-4527-8e5e-05d2d153ada0
-        json_payload: {}
         log_name: random-log-name
         receive_timestamp: 2019-09-01T12:00:00+02:00
         resource: {}
-        source_location: {}
-        text_payload: random-text-payload
         trace: random-trace
   responses:
     BuildTriggerStatuses:
