Added Flask AuditLog and NoCache packages DAT-1034

--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -9,3 +9,5 @@ google-cloud-storage == 1.16.1
 google-cloud-pubsub == 0.42.1
 google-cloud-kms == 0.2.1
 google-python-cloud-debugger == 2.13
+Flask-AuditLog==1.0
+Flask-No-Cache==1.0
