Added count-parameter to error-reporting/count and added chunks. DAT-1855

--- a/api_server/endpoint_api.yaml
+++ b/api_server/endpoint_api.yaml
@@ -99,8 +99,19 @@ paths:
           $ref: '#/components/responses/ErrorReportingCount'
         204:
           description: No content
+        403:
+          description: Parameter 'count' must be between 1 and 10
       summary: Get count of project errors reportings in last 7 days
       description: Get a list of projects with errors reportings count in last 7 days
+      parameters:
+        - name: count
+          in: query
+          description: Total entities to include
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 10
+            default: 5
       x-openapi-router-controller: openapi_server.controllers.errorreporting_controller
 components:
   schemas:
