--- a/functions/produce_error_notification/cloudbuild.example.yaml
+++ b/functions/produce_error_notification/cloudbuild.example.yaml
@@ -1,5 +1,5 @@
 ---
-timeout: 1800
+timeout: 1800s
 steps:
 
 # Deploying the Cloud Function
@@ -16,6 +16,7 @@ steps:
       --region=europe-west1 \
       --max-instances=1
     gcloud functions add-iam-policy-binding ${PROJECT_ID}-error-notifier-func \
+      --region=europe-west1 \
       --member="serviceAccount:${PROJECT_ID}@appspot.gserviceaccount.com" \
       --role="roles/cloudfunctions.invoker"
 
@@ -25,10 +26,11 @@ steps:
   args:
   - '-c'
   - |
+    gcloud scheduler jobs delete ${PROJECT_ID}-errornotifier-job --quiet || true
     gcloud scheduler jobs create http ${PROJECT_ID}-errornotifier-job \
       --schedule="0 * * * *" \
       --uri=https://europe-west1-${PROJECT_ID}.cloudfunctions.net/${PROJECT_ID}-error-notifier-func/ \
       --http-method=POST \
-      --message-body={"interval": 60} \
+      --message-body="{\"interval\": 60}" \
       --oidc-service-account-email=${PROJECT_ID}@appspot.gserviceaccount.com \
       --oidc-token-audience=https://europe-west1-${PROJECT_ID}.cloudfunctions.net/${PROJECT_ID}-error-notifier-func
