--- a/api_server/requirements-test.txt
+++ b/api_server/requirements-test.txt
@@ -9,6 +9,7 @@ Flask-AuditLog==1.0
 Flask-Cors==3.0.7
 Flask-No-Cache==1.0
 Flask-SSLify==0.1.5
+Flask-Testing==0.7.1
 google-api-core==1.16.0
 google-api-python-client==1.7.11
 google-auth==1.11.0
