--- a/api_server/endpoint_api.yaml
+++ b/api_server/endpoint_api.yaml
@@ -129,6 +129,7 @@ components:
         - project_id
         - repo_name
         - status
+        - auto_corrected
         - updated
         - log_url
       type: object
@@ -145,6 +146,8 @@ components:
             - failing
             - passing
           type: string
+        auto_corrected:
+          type: boolean
         updated:
           format: date-time
           type: string
@@ -155,6 +158,7 @@ components:
         project_id: random-project-id
         repo_name: random-repo-name
         status: passing
+        auto_corrected: false
         updated: 2019-09-01T12:00:00+02:00
         log_url: https://console.cloud.google.com/gcr/builds/random-project-id
     BuildOtherStatus:
