--- a/functions/consume_errors_func/requirements.txt
+++ b/functions/consume_errors_func/requirements.txt
@@ -1,3 +1,20 @@
-google-cloud-datastore == 1.8.0
-google-cloud-pubsub == 0.40.0
+cachetools==4.1.0
+certifi==2020.6.20
+chardet==3.0.4
+google-api-core==1.21.0
 google-auth==1.6.3
+google-cloud-core==1.3.0
+google-cloud-datastore==1.8.0
+google-cloud-pubsub==0.40.0
+googleapis-common-protos==1.52.0
+grpc-google-iam-v1==0.11.4
+grpcio==1.29.0
+idna==2.9
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pytz==2020.1
+requests==2.24.0
+rsa==4.6
+six==1.15.0
+urllib3==1.25.9
