--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -14,7 +14,9 @@ google-api-core==1.21.0
 google-auth==1.18.0
 google-cloud-core==1.3.0
 google-cloud-datastore==1.12.0
+google-cloud-kms==1.4.0
 googleapis-common-protos==1.52.0
+grpc-google-iam-v1==0.12.3
 grpcio==1.30.0
 idna==2.10
 inflection==0.5.0
