--- a/api_server/requirements-test.txt
+++ b/api_server/requirements-test.txt
@@ -1,3 +1,4 @@
+adal==1.2.2
 attrs==19.3.0
 cachetools==4.1.1
 certifi==2020.6.20
@@ -5,11 +6,13 @@ chardet==3.0.4
 click==7.1.2
 clickclick==1.2.2
 connexion==2.7.0
+coverage==5.0.3
 Flask==1.1.2
 Flask-AuditLog==1.0
 Flask-Cors==3.0.8
 Flask-No-Cache==1.0
 Flask-SSLify==0.1.5
+Flask-Testing==0.7.1
 google-api-core==1.21.0
 google-auth==1.18.0
 google-cloud-core==1.3.0
@@ -25,6 +28,7 @@ Jinja2==2.11.2
 jsonschema==3.2.0
 MarkupSafe==1.1.1
 numpy==1.19.0
+openapi3-fuzzer
 openapi-spec-validator==0.2.8
 protobuf==3.12.2
 pyasn1==0.4.8
