--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -15,6 +15,7 @@ google-auth==1.18.0
 google-cloud-core==1.3.0
 google-cloud-datastore==1.12.0
 google-cloud-kms==1.4.0
+google-cloud-secret-manager==1.0.0
 googleapis-common-protos==1.52.0
 grpc-google-iam-v1==0.12.3
 grpcio==1.30.0
