--- a/functions/consume_errors_func/requirements.txt
+++ b/functions/consume_errors_func/requirements.txt
@@ -1,20 +1,46 @@
-cachetools==4.1.0
-certifi==2020.6.20
+appdirs==1.4.3
+CacheControl==0.12.6
+cachetools==4.1.1
+certifi==2019.11.28
 chardet==3.0.4
-google-api-core==1.21.0
-google-auth==1.6.3
-google-cloud-core==1.3.0
-google-cloud-datastore==1.8.0
-google-cloud-pubsub==0.40.0
+colorama==0.4.3
+contextlib2==0.6.0
+decorator==4.4.2
+distlib==0.3.0
+distro==1.4.0
+google-api-core==1.23.0
+google-auth==1.22.1
+google-cloud-core==1.4.3
+google-cloud-datastore==1.15.3
+google-cloud-pubsub==2.1.0
 googleapis-common-protos==1.52.0
-grpc-google-iam-v1==0.11.4
-grpcio==1.29.0
-idna==2.9
-protobuf==3.12.2
+grpc-google-iam-v1==0.12.3
+grpcio==1.33.1
+html5lib==1.0.1
+idna==2.8
+ipaddr==2.2.0
+libcst==0.3.13
+lockfile==0.12.2
+msgpack==0.6.2
+mypy-extensions==0.4.3
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+proto-plus==1.11.0
+protobuf==3.13.0
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyparsing==2.4.6
+pytoml==0.1.21
 pytz==2020.1
-requests==2.24.0
+PyYAML==5.3.1
+requests==2.22.0
+retry==0.9.2
+retrying==1.3.3
 rsa==4.6
-six==1.15.0
-urllib3==1.25.9
+six==1.14.0
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
+urllib3==1.25.8
+webencodings==0.5.1
