--- a/functions/consume_errors_func/requirements.unexpanded.txt
+++ b/functions/consume_errors_func/requirements.unexpanded.txt
@@ -1,3 +1,5 @@
-google-cloud-datastore == 1.8.0
-google-cloud-pubsub == 0.40.0
-google-auth==1.6.3
+google-api-core == 1.23.0
+google-cloud-datastore == 1.15.3
+google-cloud-pubsub == 2.1.0
+google-auth == 1.22.1
+retry == 0.9.2
