--- a/api_server/requirements.unexpanded.txt
+++ b/api_server/requirements.unexpanded.txt
@@ -7,5 +7,6 @@ Flask-SSLify==0.1.5
 google-cloud-datastore==1.12.0
 google-cloud-kms==1.4.0
 google-cloud-secret-manager==1.0.0
+gunicorn==20.0.4
 swagger-ui-bundle==0.0.6
 Werkzeug==0.16.1
