Added Gevent. DAT-4995

--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -16,6 +16,7 @@ Flask-AuditLog==1.0
 Flask-Cors==3.0.8
 Flask-No-Cache==1.0
 Flask-SSLify==0.1.5
+gevent==20.9.0
 google-api-core==1.23.0
 google-auth==1.23.0
 google-cloud-core==1.4.4
@@ -23,6 +24,7 @@ google-cloud-datastore==1.12.0
 google-cloud-kms==1.4.0
 google-cloud-secret-manager==1.0.0
 googleapis-common-protos==1.52.0
+greenlet==0.4.17
 grpc-google-iam-v1==0.12.3
 grpcio==1.34.0
 gunicorn==20.0.4
@@ -56,3 +58,5 @@ swagger-ui-bundle==0.0.6
 urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==0.16.1
+zope.event==4.5.0
+zope.interface==5.2.0
