--- a/api_server/requirements.unexpanded.txt
+++ b/api_server/requirements.unexpanded.txt
@@ -4,6 +4,7 @@ Flask-AuditLog==1.0
 Flask-Cors==3.0.8
 Flask-No-Cache==1.0
 Flask-SSLify==0.1.5
+gevent==20.9.0
 google-cloud-datastore==1.12.0
 google-cloud-kms==1.4.0
 google-cloud-secret-manager==1.0.0
