--- a/functions/produce_error_notification/requirements.unexpanded.txt
+++ b/functions/produce_error_notification/requirements.unexpanded.txt
@@ -12,6 +12,7 @@ google-api-python-client==1.8.2
 googleapis-common-protos==1.51.0
 grpc-google-iam-v1==0.12.3
 grpcio==1.28.1
+httplib2==0.19.0
 idna==2.9
 protobuf==3.11.3
 pyasn1==0.4.8
