--- a/functions/format_issues_func/requirements.txt
+++ b/functions/format_issues_func/requirements.txt
@@ -1,6 +1,7 @@
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+gobits==1.0.8
 google-api-core==1.26.1
 google-auth==1.28.0
 google-cloud-pubsub==2.3.0
@@ -24,3 +25,4 @@ six==1.15.0
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 urllib3==1.26.4
+Werkzeug==1.0.1
