--- a/functions/consume_errors_func/requirements.unexpanded.txt
+++ b/functions/consume_errors_func/requirements.unexpanded.txt
@@ -1,5 +1,5 @@
-google-api-core == 1.23.0
-google-cloud-datastore == 1.15.3
-google-cloud-pubsub == 2.1.0
-google-auth == 1.22.1
-retry == 0.9.2
+google-api-core==1.26.3
+google-cloud-datastore==2.1.0
+google-cloud-pubsub==2.3.0
+google-auth==1.28.0
+retry==0.9.2
